# fuse-ufs2

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  fuse-ufs.1  fuse-ufs.pc  fuse-ufs.pc.in  libtool
autom4te.cache/: output.0  traces.0
doc-pak/: CREDITS  ChangeLog  README
fuse-ufs/: .fuse-ufs.c.swo  .fuse-ufs.c.swp  Makefile  Makefile.am  Makefile.in  do_check.c  do_fillstatbuf.c  do_killfilebyinode.c  do_probe.c  do_readinode.c  fuse-inodealloc.c  fuse-inodeops.c  fuse-ufs-fileio.c  fuse-ufs-misc.h  fuse-ufs-tables.c  fuse-ufs-utils.c  fuse-ufs.c  fuse-ufs.h  fuse-ufs.probe.c  op_access.c  op_chmod.c  op_chown.c  op_create.c  op_destroy.c  op_fgetattr.c  op_flush.c  op_fsync.c  op_getattr.c  op_init.c  op_link.c  op_mkdir.c  op_mknod.c  op_open.c  op_read.c  op_readdir.c  op_readlink.c  op_release.c  op_rename.c  op_rmdir.c  op_statfs.c  (+6 more)
fuse-ufs/.deps/: umfuseufs_la-do_check.Plo  umfuseufs_la-do_fillstatbuf.Plo  umfuseufs_la-do_killfilebyinode.Plo  umfuseufs_la-do_probe.Plo  umfuseufs_la-do_readinode.Plo  umfuseufs_la-fuse-inodealloc.Plo  umfuseufs_la-fuse-inodeops.Plo  umfuseufs_la-fuse-ufs-fileio.Plo  umfuseufs_la-fuse-ufs-tables.Plo  umfuseufs_la-fuse-ufs-utils.Plo  umfuseufs_la-fuse-ufs.Plo  umfuseufs_la-op_access.Plo  umfuseufs_la-op_chmod.Plo  umfuseufs_la-op_chown.Plo  umfuseufs_la-op_create.Plo  umfuseufs_la-op_destroy.Plo  umfuseufs_la-op_fgetattr.Plo  umfuseufs_la-op_flush.Plo  umfuseufs_la-op_fsync.Plo  umfuseufs_la-op_getattr.Plo  umfuseufs_la-op_init.Plo  umfuseufs_la-op_link.Plo  umfuseufs_la-op_mkdir.Plo  umfuseufs_la-op_mknod.Plo  umfuseufs_la-op_open.Plo  umfuseufs_la-op_read.Plo  umfuseufs_la-op_readdir.Plo  umfuseufs_la-op_readlink.Plo  umfuseufs_la-op_release.Plo  umfuseufs_la-op_rename.Plo  umfuseufs_la-op_rmdir.Plo  umfuseufs_la-op_statfs.Plo  umfuseufs_la-op_symlink.Plo  umfuseufs_la-op_truncate.Plo  umfuseufs_la-op_unlink.Plo  umfuseufs_la-op_utimens.Plo  umfuseufs_la-op_write.Plo  umfuseufs_la-ufs-fileio.Plo  umfuseufs_la-vnode_hash.Plo
libufs/: Makefile  Makefile.am  Makefile.common  Makefile.in  block.c  cgroup.c  dinode.h  dir.h  fs.h  inode.c  inode.h  libufs.h  sblock.c  type.c  ufsmount.h
libufs/sys/: disklabel.h  mount.h  param.h  ucred.h
